[FIX] fix ad tepsell

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -466,13 +466,14 @@
                     android:id="@+id/tapsell_nativead_cta_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardCornerRadius="15dp"
-                    app:cardBackgroundColor="@color/color_background_gallery_item"
-                    android:animateLayoutChanges="true"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
-                    android:layout_gravity="center">
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:animateLayoutChanges="true"
+                    app:cardBackgroundColor="@color/color_background_gallery_item"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="5dp">
 
                     <FrameLayout
                         android:id="@+id/adContainer"
