--- a/app/src/main/res/layout/native_banner_detail.xml
+++ b/app/src/main/res/layout/native_banner_detail.xml
@@ -4,69 +4,96 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="7dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tapsell_nativead_title"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center|right"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tapsell_nativead_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|right"
-            android:textSize="14dp" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            app:cardBackgroundColor="@color/color_btn_admob"
-            app:cardCornerRadius="10dp"
-            app:contentPadding="7dp">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <TextView
-                android:id="@+id/tapsell_nativead_cta"
+                android:id="@+id/tapsell_nativead_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|right"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tapsell_nativead_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|right"
+                android:textSize="14dp" />
+
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="12dp" />
+                android:layout_gravity="right"
+                android:layout_marginTop="4dp"
+                app:cardBackgroundColor="@color/color_btn_admob"
+                app:cardCornerRadius="10dp"
+                app:contentPadding="7dp">
+
+                <TextView
+                    android:id="@+id/tapsell_nativead_cta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="4dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:id="@+id/tapsell_nativead_logo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </com.google.android.material.card.MaterialCardView>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        android:layout_marginRight="4dp"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="10dp">
+<!--    <com.google.android.material.card.MaterialCardView-->
+<!--        android:id="@+id/tapsell_nativead_cta_view"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginRight="7dp"-->
+<!--        android:layout_marginLeft="7dp"-->
+<!--        android:layout_marginBottom="7dp"-->
+<!--        app:cardCornerRadius="10dp"-->
+<!--        app:cardElevation="0dp">-->
 
-        <ImageView
-            android:id="@+id/tapsell_nativead_logo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+<!--        <ir.tapsell.sdk.nativeads.views.RatioImageView-->
+<!--            android:id="@+id/tapsell_nativead_banner"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content" />-->
 
-    </com.google.android.material.card.MaterialCardView>
+<!--    </com.google.android.material.card.MaterialCardView>-->
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
