--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -345,7 +345,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="25dp"
                                         android:layout_alignParentBottom="true"
-                                        app:blurOverlayColor="#33FFFFFF">
+                                        app:blurOverlayColor="#80000000">
 
                                         <LinearLayout
                                             android:layout_width="match_parent"
@@ -358,7 +358,7 @@
                                                 android:layout_height="match_parent"
                                                 android:gravity="center"
                                                 android:text="مشاهده نقشه کامل"
-                                                android:textColor="@color/black"
+                                                android:textColor="@color/white"
                                                 android:textSize="13dp"
                                                 android:visibility="visible"
                                                 tools:text="loacation" />
