--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -368,6 +368,11 @@
 
                                     </eightbitlab.com.blurview.BlurView>
 
+                                    <View
+                                        android:id="@+id/view_on_map_click"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"/>
+
                                 </RelativeLayout>
 
                             </com.google.android.material.card.MaterialCardView>
@@ -478,16 +483,7 @@
                     <FrameLayout
                         android:id="@+id/adContainer"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    </FrameLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/standardBanner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center" />
+                        android:layout_height="wrap_content"/>
 
                 </com.google.android.material.card.MaterialCardView>
 
