--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -227,33 +227,15 @@
 
                 </com.google.android.material.card.MaterialCardView>
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/card_view_classification"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    app:cardBackgroundColor="@color/color_background_gallery_item"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="5dp">
+
+
                     <LinearLayout
+                        android:id="@+id/ly_classifications"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+
                         android:gravity="center|right"
                         android:orientation="vertical">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/string_photo_category"
-                            android:textColor="@color/black"
-                            android:layout_margin="10dp"
-                            android:textSize="16dp"
-                            android:textStyle="bold"
-                            android:visibility="visible"
-                            tools:visibility="visible" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rec_classification"
@@ -268,8 +250,6 @@
 
                     </LinearLayout>
 
-
-                </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
