--- a/app/src/main/res/layout/item_calssification.xml
+++ b/app/src/main/res/layout/item_calssification.xml
@@ -4,20 +4,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="35dp"
-    android:layout_marginRight="7dp"
-    android:layout_marginBottom="7dp"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="4dp"
+    android:layout_marginBottom="10dp"
     app:cardElevation="0dp"
     app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="@color/color_download_popup">
+    app:cardBackgroundColor="@color/color_background_gallery_item">
 
     <TextView
         android:id="@+id/text_view_classification"
         android:layout_width="wrap_content"
-        android:layout_margin="7dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         tools:text="title"
         android:gravity="center"
-        android:textSize="14dp"/>
+        android:textSize="12dp"/>
 
 </com.google.android.material.card.MaterialCardView>
