[FIX] models rout .

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
         tools:layout="@layout/fragment_details">
         <argument
             android:name="photo"
-            app:argType="com.javadEsl.pixel.data.UnsplashPhoto" />
+            app:argType="com.javadEsl.pixel.data.search.PixelPhoto" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
