[FIX] something about nav_graph.xml for navigated to detailFragment

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -157,6 +157,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_searching"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:spanCount="2"
+        tools:itemCount="40"
+        tools:listitem="@layout/item_unsplash_photo"/>
 
 </LinearLayout>
